http://bugzilla.zimbra.com/show_bug.cgi?id=11718 Bug: 11718 Fix alignment of address select
Copied from Perforce
 Change: 35055

--- a/WebRoot/js/zimbraMail/config/style/zm.css
+++ b/WebRoot/js/zimbraMail/config/style/zm.css
@@ -2020,7 +2020,6 @@ HTML>BODY .appt-selected .appt_allday_body
 .ZmIdentityView .DwtButton-active,
 .ZmIdentityView .DwtButton-focused {
 	min-width: 0;
-	margin-left: 5px;
 }
 
 .ZmPopAccountsView {}
